2009-05-22  Lluis Sanchez Gual  <lluis@novell.com>

	* TabStrip.cs:
	* DockItemContainer.cs: Use a custom frame instead of
	  Gtk.Frame. This frame always draws a 1-pixel border. The
	  border is not drawn if below it there is a tab. Reduced the
	  padding used in tabs.

	* DockBar.cs:
	* DockFrame.cs: Hide the autohide dock bars when nothing is
	  docked.

	* DockGroup.cs: Use a custom frame instead of Gtk.Frame. This
	  frame always draws a 1-pixel border.

2009-04-17  Mike Kestner  <mkestner@novell.com>

	* MonoDevelop.Dock.csproj: don't require specific
	gtk-sharp version.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* DockTest.mdp: Remove unused files.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Dock.mds:
	* MonoDevelop.Dock.mdp:
	* MonoDevelop.Dock.csproj: Migrated to MSBuild file format.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Dock.mdp: Flush project format changes.

2008-12-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Dock.mdp: Updated.

	* DockFrame.cs:
	* DockGroup.cs:
	* DockBarItem.cs:
	* DockContainer.cs: Giving focus when presenting a dock item is now
	optional.

	* DockItem.cs: Added new ContentVisible property, which is true when the
	content is currently displayed. E.g. if an item is docked in a
	notebook, and it is not the active tab, Visible will be true, but
	ContentVisible will be false.

2008-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs: Added missing null check.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs:
	* DockGroup.cs:
	* DockBarItem.cs: Focusing fixes.

	* Makefile.am: Make it work for parallel build.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* DockBarItem.cs: Improved dock item focusing. Close autohide panels
	when pressing Esc.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs:
	* DockBarItem.cs: When presenting an iconized item, give it the focus
	and show it.
